# gameng

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: env_setup.cmake
ext/GLAD/: CMakeLists.txt
ext/GLAD/include/glad/: glad.h
ext/GLAD/src/: glad.c
ext/stb/: CMakeLists.txt
sandbox/: CMakeLists.txt  sandbox.cpp
sandbox/assets/shaders/: texture.glsl
src/: CMakeLists.txt  gameng.hpp
src/gameng/: applicaiton.hpp  application.cpp  application_event.hpp  core.hpp  entrypoint.hpp  event.hpp  imgui_layer.cpp  imgui_layer.hpp  input.hpp  key_event.hpp  keycodes.hpp  layer.cpp  layer.hpp  layerstack.cpp  layerstack.hpp  log.cpp  log.hpp  mouse_event.hpp  mousebutton_codes.hpp  window.hpp
src/gameng/core/: filesystem.cpp  filesystem.hpp  timestep.hpp
src/gameng/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.hpp
src/gameng/platform/linux/: linux_input.cpp  linux_input.hpp  linux_window.cpp  linux_window.hpp
src/gameng/platform/opengl/: imgui_opengl_renderer.cpp  imgui_opengl_renderer.hpp  opencl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
src/gameng/renderer/: buffer.cpp  buffer.hpp  camera.hpp  graphic_context.hpp  ortographic_camera.cpp  ortographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp  render_command.cpp  render_command.hpp  renderer.cpp  renderer.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/gameng/window/: window.hpp
src/gameng/window/linux/: linux_window.cpp  linux_window.hpp
